// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxCardLink customize 1`] = `
<div>
  <a
    class="card-link bazinga"
    href="/bazinga"
  >
    Test
  </a>
</div>
`;

exports[`loads and displays CxCardLink component 1`] = `
<div>
  <a
    class="card-link"
  >
    Test
  </a>
</div>
`;
